--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,11 @@
 		body {
 			margin: 0;
 			padding: 0;
+            position: fixed;top: 0;
+            left:0;
+            width: 100%;
+            height: 100%;
+
 		}
 		.scroll {
 			position: absolute;
@@ -23,6 +28,16 @@
 		}
         refresher {
             display: block;
+        }
+        ul {
+            padding: 0; margin: 0;
+        }
+        li {
+            list-style: none;
+            padding: 10px 10px;
+            margin: -1px;
+            display: block;
+            border: 1px solid #ccc;
         }
 		.refresh{
 			background: #7b91aa;
@@ -55,8 +70,9 @@
 <body ng-app="app" ng-controller="AppCtrl">
 <scroll on-refresh="refresh">
 	<refresher>Pull to Refresh</refresher>
+    <button ng-click="alert(123)">Click</button>
 	<ul>
-        <li ng-repeat="item in list">{{item}}</li>
+        <li ng-click="log(item)" ng-repeat="item in list">{{item}}</li>
     </ul>
 	<infinity-scroll ng-if="infinityEnabled" on-infinite="infinity"></infinity-scroll>
 </scroll>
