--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Scroll example</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 	<script src="bower_components/angular/angular.js"></script>
     <script src="../dist/scroll.js"></script>
 	<style>
