change in infinity scroll

--- a/example/index.html
+++ b/example/index.html
@@ -74,7 +74,8 @@
 	<ul>
         <li ng-click="log(item)" ng-repeat="item in list">{{item}}</li>
     </ul>
-	<infinity-scroll ng-if="infinityEnabled" on-infinite="infinity()"></infinity-scroll>
+	<infinity-scroll ng-if="infinityEnabled" on-infinite="infinity()">Test new</infinity-scroll>
+
 </scroll>
 <script src="app.js"></script>
 </body>
